@@ -155,6 +155,7 @@ Version 0.0.4b (in progress)
 * [Fixed] New user creation from the teams edit menu in the ACP.
 * [Fixed] Most recent team names not displaying on "All Teams" page in the ACP.
 * [Changed] User profiles and team names can now be reset separately.
+* [Fixed] Force permissions on install folder.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
